tdf#58604 keep line break follows hanging punctuation.

Do not treat the line as full if the chacracter following
the hanging punctuation is a line break, so that the line
break is placed after the hanging punctuation instead of
at the beginning of the next line.

Change-Id: Ia6e07cf457b3e1ba39700eb6d6dc74e4b57b64de